# enf-autoresearch

./: .gitignore  LICENSE  README.md  analyze_all.py  prepare.py  program.md  pyproject.toml  results.tsv  run_loop.py  train.py
data/: enf_date_results_v1.json  forensic_linguistics.json  ground_truth.json  jo03_embedded.json  jo_joint_results.json  metadata.json
docs/: DISCLAIMERS.md  ENF_EXPLAINER.md
notebooks/: 01_signal_layer_authentication.ipynb  02_enf_date_verification.ipynb  03_enf_segment_analysis.ipynb  04_enf_joint_analysis.ipynb  05_corroboration_matrix.ipynb  06_forensic_linguistics.ipynb  style.py
results/: latest.json
results/analysis/: summary.json
scripts/: download_enf_reference.py  download_recordings.sh
