[project]
name = "enf-autoresearch"
version = "0.1.0"
description = "Autonomous ENF forensic audio dating optimization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0",
]
